Fixed Logos on MObile

--- a/main.css
+++ b/main.css
@@ -1402,6 +1402,9 @@ a:hover {
     border-top-right-radius: 0%;
   }
 
+  .millImg {
+    width: 50%;
+  }
   .projDesc {
     font-family: "mont";
     letter-spacing: -0.5px;
